# pingmewhen

./: .env.example  .gitignore  AGENTS.md  README.md  idea.md  install.sh  pyproject.toml
docs/: DECISIONS.md  DESIGN.md  HIGHLIGHTS.md  IMPLEMENTATION_PLAN.md  INSTALL.md  PRD.md  submission.md
src/relay_agent/: __init__.py  agentic_engine.py  app.py  call_capabilities.py  call_debug.py  cli.py  context_store.py  credentials.py  event_log.py  gatekeeper.py  interaction_prompts.py  local_tts.py  model_settings.py  names.py  planner.py  realtime_bridge.py  task_engine.py  task_errors.py  task_store.py  telephony.py  tunnel.py
src/relay_agent/static/: index.html
src/relay_agent/static/previews/: index.html  onboarding.html  preview.css  takeover.html
tests/: test_agentic_engine.py  test_app.py  test_call_debug.py  test_cli.py  test_credentials.py  test_event_log.py  test_gatekeeper.py  test_installer.py  test_interaction_prompts.py  test_local_tts.py  test_model_settings.py  test_names.py  test_realtime_bridge.py  test_task_engine.py  test_task_store.py  test_telephony.py
