[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingmewhen"
version = "0.1.0"
description = "PingMeWhen — a local-first, human-supervised task agent that makes phone calls and pings you only when you're needed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "openai>=2.45.0",
  "pypdf",
  "pycloudflared>=0.3.0",
  "pyobjc-framework-AVFoundation>=12.2; platform_system == 'Darwin'",
  "python-dotenv",
  "python-multipart",
  "twilio",
  "uvicorn[standard]",
  "websockets>=16.0",
]

[project.scripts]
pingmewhen = "relay_agent.cli:main"
relay = "relay_agent.cli:main"

[dependency-groups]
dev = [
  "httpx",
  "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/relay_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
